--- a/hwadtools.cabal
+++ b/hwadtools.cabal
@@ -31,5 +31,5 @@ executable wadxtract
 
 executable waddiff
   main-is:             waddiff.hs
-  build-depends:       base >=4.9 && <4.10, bytestring >= 0.10, binary >= 0.8, sandi >= 0.4, directory >= 1.2, filepath >= 1.4
+  build-depends:       base >=4.9 && <4.10, bytestring >= 0.10, binary >= 0.8, directory >= 1.2, filepath >= 1.4, Diff, pretty
   default-language:    Haskell98
