--- a/hwadtools.cabal
+++ b/hwadtools.cabal
@@ -2,7 +2,7 @@
 -- documentation, see http://haskell.org/cabal/users-guide/
 
 name:                hwadtools
-version:             0.3.0
+version:             0.4.0
 synopsis:            WAD manipulation tools, developed in Haskell
 description:
     <https://jmtd.net/software/hwadtools HWadTools> is a suite of simple tools
@@ -36,11 +36,11 @@ executable wadxtract
 executable waddiff
   main-is:             waddiff.hs
   other-modules:       Wad
-  build-depends:       base >=4.9 && <4.11, bytestring >= 0.10, binary >= 0.8, directory >= 1.2, filepath >= 1.4, Diff, pretty
+  build-depends:       base >=4.9 && <4.11, bytestring >= 0.10, binary >= 0.8, Diff, pretty
   default-language:    Haskell98
 
 executable wadcat
   main-is:             wadcat.hs
   other-modules:       Wad
-  build-depends:       base >=4.9 && <4.11, bytestring >= 0.10, binary >= 0.8, directory >= 1.2, filepath >= 1.4
+  build-depends:       base >=4.9 && <4.11, bytestring >= 0.10, binary >= 0.8
   default-language:    Haskell98
