--- a/hwadtools.cabal
+++ b/hwadtools.cabal
@@ -2,7 +2,7 @@
 -- documentation, see http://haskell.org/cabal/users-guide/
 
 name:                hwadtools
-version:             0.4.0
+version:             0.5.0
 synopsis:            WAD manipulation tools, developed in Haskell
 description:
     <https://jmtd.net/software/hwadtools HWadTools> is a suite of simple tools
@@ -47,6 +47,6 @@ executable wadcat
 
 executable wadstats
   main-is:             wadstats.hs
-  other-modules:       Wad
+  other-modules:       Wad, Doom.Things, Bits
   build-depends:       base >=4.9 && <4.11, bytestring >= 0.10, binary >= 0.8, directory >= 1.2, filepath >= 1.4, containers, Unique
   default-language:    Haskell98
