--- a/hwadtools.cabal
+++ b/hwadtools.cabal
@@ -16,37 +16,60 @@ maintainer:          jon@dow.land
 -- copyright:
 category:            Game
 build-type:          Simple
-extra-source-files:  ChangeLog.md
 cabal-version:       >=1.10
 
 executable lswad
   main-is:             lswad.hs
-  other-modules:       Wad, Util
+  other-modules:       Wad
+                     , Util
   -- other-extensions:
-  build-depends:       base >=4.9 && <4.11, bytestring >= 0.10, binary >= 0.8
+  build-depends:       base >=4.9 && <4.13
+                     , bytestring >= 0.10
+                     , binary >= 0.8
   -- hs-source-dirs:
   default-language:    Haskell98
 
 executable wadxtract
   main-is:             wadxtract.hs
   other-modules:       Wad
-  build-depends:       base >=4.9 && <4.11, bytestring >= 0.10, binary >= 0.8, sandi >= 0.4, directory >= 1.2, filepath >= 1.4
+  build-depends:       base >=4.9 && <4.13
+                     , bytestring >= 0.10
+                     , binary >= 0.8
+                     , sandi >= 0.4
+                     , directory >= 1.2
+                     , filepath >= 1.4
   default-language:    Haskell98
 
 executable waddiff
   main-is:             waddiff.hs
   other-modules:       Wad
-  build-depends:       base >=4.9 && <4.11, bytestring >= 0.10, binary >= 0.8, Diff, pretty
+                     , Util
+  build-depends:       base >=4.9 && <4.13
+                     , bytestring >= 0.10
+                     , binary >= 0.8
+                     , Diff
+                     , pretty
   default-language:    Haskell98
 
 executable wadcat
   main-is:             wadcat.hs
   other-modules:       Wad
-  build-depends:       base >=4.9 && <4.11, bytestring >= 0.10, binary >= 0.8
+  build-depends:       base >=4.9 && <4.13
+                     , bytestring >= 0.10
+                     , binary >= 0.8
   default-language:    Haskell98
 
 executable wadstats
   main-is:             wadstats.hs
-  other-modules:       Wad, Doom.Things, Bits, Util
-  build-depends:       base >=4.9 && <4.11, bytestring >= 0.10, binary >= 0.8, directory >= 1.2, filepath >= 1.4, containers, Unique
+  other-modules:       Wad
+                     , Doom.Things
+                     , Bits
+                     , Util
+  build-depends:       base >=4.9 && <4.13
+                     , bytestring >= 0.10
+                     , binary >= 0.8
+                     , directory >= 1.2
+                     , filepath >= 1.4
+                     , containers
+                     , Unique
   default-language:    Haskell98
